test: adding CI

--- a/tests/jest-stare/index.html
+++ b/tests/jest-stare/index.html
@@ -153,7 +153,7 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1731166010774,
+  &quot;startTime&quot;: 1731167639549,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [
     {
@@ -164,10 +164,10 @@
       &quot;numTodoTests&quot;: 0,
       &quot;openHandles&quot;: [],
       &quot;perfStats&quot;: {
-        &quot;end&quot;: 1731166017876,
-        &quot;runtime&quot;: 6829,
+        &quot;end&quot;: 1731167646172,
+        &quot;runtime&quot;: 6381,
         &quot;slow&quot;: true,
-        &quot;start&quot;: 1731166011047
+        &quot;start&quot;: 1731167639791
       },
       &quot;skipped&quot;: false,
       &quot;snapshot&quot;: {
@@ -179,7 +179,7 @@
         &quot;unmatched&quot;: 0,
         &quot;updated&quot;: 0
       },
-      &quot;testFilePath&quot;: &quot;C:\\Users\\Weslley Da Motta\\OneDrive\\Documents\\Estudo\\PGATS\\Automação de API Rest\\ProjetoFinal\\test\\conteudo\\crud-conteudo.test.js&quot;,
+      &quot;testFilePath&quot;: &quot;C:\\Users\\Weslley Da Motta\\OneDrive\\Documents\\Estudo\\PGATS\\Automação de API Rest\\ProjetoAula\\tests\\test\\conteudo\\crud-conteudo.test.js&quot;,
       &quot;testResults&quot;: [
         {
           &quot;ancestorTitles&quot;: [
@@ -215,7 +215,7 @@
           &quot;ancestorTitles&quot;: [
             &quot;PGATS - Automação de Testes de API REST&quot;
           ],
-          &quot;duration&quot;: 13,
+          &quot;duration&quot;: 14,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;PGATS - Automação de Testes de API REST Teste 03: Deve alterar o conteudo cadastrado anteriormente, e validar que os dados foram realmente alterados&quot;,
@@ -230,7 +230,7 @@
           &quot;ancestorTitles&quot;: [
             &quot;PGATS - Automação de Testes de API REST&quot;
           ],
-          &quot;duration&quot;: 19,
+          &quot;duration&quot;: 18,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;PGATS - Automação de Testes de API REST Teste 04: Deve remover o registro cadastrado, e validar a consulta do registro para garantir sua remoção&quot;,
@@ -254,7 +254,7 @@
   &quot;ci&quot;: false,
   &quot;collectCoverage&quot;: false,
   &quot;collectCoverageFrom&quot;: [],
-  &quot;coverageDirectory&quot;: &quot;C:\\Users\\Weslley Da Motta\\OneDrive\\Documents\\Estudo\\PGATS\\Automação de API Rest\\ProjetoFinal\\coverage&quot;,
+  &quot;coverageDirectory&quot;: &quot;C:\\Users\\Weslley Da Motta\\OneDrive\\Documents\\Estudo\\PGATS\\Automação de API Rest\\ProjetoAula\\tests\\coverage&quot;,
   &quot;coverageProvider&quot;: &quot;babel&quot;,
   &quot;coverageReporters&quot;: [
     &quot;json&quot;,
@@ -289,7 +289,7 @@
       {}
     ],
     [
-      &quot;C:\\Users\\Weslley Da Motta\\OneDrive\\Documents\\Estudo\\PGATS\\Automação de API Rest\\ProjetoFinal\\node_modules\\jest-stare\\lib\\index.js&quot;,
+      &quot;C:\\Users\\Weslley Da Motta\\OneDrive\\Documents\\Estudo\\PGATS\\Automação de API Rest\\ProjetoAula\\tests\\node_modules\\jest-stare\\lib\\index.js&quot;,
       {
         &quot;resultDir&quot;: &quot;jest-stare&#x2F;&quot;,
         &quot;reportTitle&quot;: &quot;Relatório de Testes&quot;,
@@ -299,9 +299,9 @@
       }
     ]
   ],
-  &quot;rootDir&quot;: &quot;C:\\Users\\Weslley Da Motta\\OneDrive\\Documents\\Estudo\\PGATS\\Automação de API Rest\\ProjetoFinal&quot;,
+  &quot;rootDir&quot;: &quot;C:\\Users\\Weslley Da Motta\\OneDrive\\Documents\\Estudo\\PGATS\\Automação de API Rest\\ProjetoAula\\tests&quot;,
   &quot;runTestsByPath&quot;: false,
-  &quot;seed&quot;: 1732358277,
+  &quot;seed&quot;: 1266547284,
   &quot;skipFilter&quot;: false,
   &quot;snapshotFormat&quot;: {
     &quot;escapeString&quot;: false,
@@ -309,7 +309,7 @@
   },
   &quot;testFailureExitCode&quot;: 1,
   &quot;testPathPattern&quot;: &quot;&quot;,
-  &quot;testSequencer&quot;: &quot;C:\\Users\\Weslley Da Motta\\OneDrive\\Documents\\Estudo\\PGATS\\Automação de API Rest\\ProjetoFinal\\node_modules\\@jest\\test-sequencer\\build\\index.js&quot;,
+  &quot;testSequencer&quot;: &quot;C:\\Users\\Weslley Da Motta\\OneDrive\\Documents\\Estudo\\PGATS\\Automação de API Rest\\ProjetoAula\\tests\\node_modules\\@jest\\test-sequencer\\build\\index.js&quot;,
   &quot;updateSnapshot&quot;: &quot;new&quot;,
   &quot;useStderr&quot;: false,
   &quot;verbose&quot;: true,
